--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 
 
-                <button type="submit" id="submitButton">Trimite Formularul</button>
+                <!-- <button type="submit" id="submitButton">Trimite Formularul</button> -->
             </form>
         </div>
     </article>
@@ -599,7 +599,7 @@
 
         })
     }
-    document.getElementById("aaa").addEventListener("click", addData1);
+    // document.getElementById("aaa").addEventListener("click", addData1);
 
     function addData() {
 
