Removed Default Q Button

--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
 
 
 
-                <!-- <button type="submit" id="submitButton">Trimite Formularul</button> -->
+                <button type="submit" id="submitButton">Trimite Formularul</button>
             </form>
         </div>
     </article>
 
-    <button id="aaa">Add default Q Counter</button>
+    <!-- <button id="aaa">Add default Q Counter</button> -->
 </body>
 
 
