Adaugare nume complet

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 onsubmit="document.getElementById('submitButton').setAttribute('disabled', 'disabled'); window.setTimeout(function () { document.getElementById('delayedForm').submit(); }, 2000); return false">
 
                 <div class="container">
-                    <input placeholder="Nume" type="text" name="username" id="username" required>
+                    <input placeholder="Nume Complet" type="text" name="username" id="username" required>
                     <input placeholder="Email" type="email" name="email" id="email" required>
                     <input placeholder="An de studiu" type="text" name="anStudiu" id="anStudiu" required>
                 </div>
